resizing full height container correctly on mobile

--- a/src/container/DrawerNavContainer.scss
+++ b/src/container/DrawerNavContainer.scss
@@ -27,7 +27,6 @@ $breakPoint: 800px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
     transition: width $animDuration ease-in-out,
     height $animDuration ease-in-out,
     filter $animDuration * 1.5 ease-in-out;
